  (Hannes Mehnert with Kate Deplaix and Stéphane Glondu, review by Xavier Leroy)

- #10135: Overhaul the FlexDLL bootstrap process. A separate non-shared version
  of the runtime is built, and shared artefacts are no longer built twice. The
  flexdll target no longer has to be separately built, but is folded into the
  default make target. flexlink.opt is now built automatically with opt.opt. If
  the flexdll code is present, any flexlink in PATH is ignored.
  (David Allsopp, review by Sébastien Hinderer)

### Bug fixes:

- #10147, #10148: Fix building runtime with GCC on macOS.
  (David Allsopp, report by John Skaller)

- #10250, #10266: Dynamically allocate alternate signal stacks to
  accommodate changes in Glibc 2.34.
  (Xavier Leroy, reports by Tomasz Kłoczko and R.W.M. Jones, review by Anil
   Madhavapeddy, Stephen Dolan, and Florian Angeletti)

- #10698, #10726, #10891: Free the alternate signal stack when the main OCaml
  code or an OCaml thread stops.
  (Xavier Leroy, review by David Allsopp, Florian Angeletti and Damien Doligez)

- #11358, #11378: Refactor the initialization of bytecode threading.
  This avoids a "dangling pointer" warning of GCC 12.1.
  (Xavier Leroy, report by Armaël Guéneau, review by Gabriel Scherer)

- #12116, #12993: explicitly build non PIE executables on x86 32bits
  architectures
  (Florian Angeletti, review by David Allsopp)

OCaml 4.12.1 (24 September 2021)
--------------------------------

### Bug fixes:

- #10107: Ensure modules compiled with -afl-instrument can still link on
  platforms without AFL support.
  (David Allsopp, review by Xavier Leroy)

- #10294, #10295: fix an assert-failure in pattern-matching compilation
  (Gabriel Scherer, review by Thomas Refis and Luc Maranget,
   report by Nicolás Ojeda Bär)

- #10310: configure's --enable-spacetime option now causes an error rather than
  being silently ignored.
  (David Allsopp, review by Gabriel Scherer)

- #10351: Fix DLL loading with binutils 2.36+ on mingw-w64