@@ -24,7 +24,8 @@ OCaml 4.12, maintenance version
   of the runtime is built, and shared artefacts are no longer built twice. The
   flexdll target no longer has to be separately built, but is folded into the
   default make target. flexlink.opt is now built automatically with opt.opt. If
-  the flexdll code is present, any flexlink in PATH is ignored.
+  the flexdll code is present, any flexlink in PATH is ignored. The Cygwin port
+  now also supports bootstrapping FlexDLL.
   (David Allsopp, review by Sébastien Hinderer)
 
 ### Bug fixes:
